--- a/pages/blog.html
+++ b/pages/blog.html
@@ -79,8 +79,12 @@
                             </div>
                             <div class="blog-content">
                                 <h4>文章標題</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sequi maiores voluptas
-                                    consequatur pariatur corrupti, deleniti quo quam fugiat esse.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, doloribus! Expedita
+                                    maxime perferendis at maiores. Neque illo cum quia natus voluptatem eos fugiat porro
+                                    dicta a voluptatum exercitationem harum rem at, quo sunt, ut quasi accusamus aut!
+                                    Facere ipsa, at necessitatibus hic debitis vitae cupiditate incidunt maiores.
+                                    Laboriosam ratione nesciunt maxime fuga eligendi. Tempore, modi doloribus. Harum
+                                    totam sint inventore!</p>
                                 <!-- Button trigger modal -->
                                 <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
                                     data-bs-target="#staticBackdrop">
@@ -98,8 +102,12 @@
                             </div>
                             <div class="blog-content">
                                 <h4>文章標題</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sequi maiores voluptas
-                                    consequatur pariatur corrupti, deleniti quo quam fugiat esse.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, doloribus! Expedita
+                                    maxime perferendis at maiores. Neque illo cum quia natus voluptatem eos fugiat porro
+                                    dicta a voluptatum exercitationem harum rem at, quo sunt, ut quasi accusamus aut!
+                                    Facere ipsa, at necessitatibus hic debitis vitae cupiditate incidunt maiores.
+                                    Laboriosam ratione nesciunt maxime fuga eligendi. Tempore, modi doloribus. Harum
+                                    totam sint inventore!</p>
                                 <!-- Button trigger modal -->
                                 <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
                                     data-bs-target="#staticBackdrop">
@@ -117,8 +125,12 @@
                             </div>
                             <div class="blog-content">
                                 <h4>文章標題</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sequi maiores voluptas
-                                    consequatur pariatur corrupti, deleniti quo quam fugiat esse.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, doloribus! Expedita
+                                    maxime perferendis at maiores. Neque illo cum quia natus voluptatem eos fugiat porro
+                                    dicta a voluptatum exercitationem harum rem at, quo sunt, ut quasi accusamus aut!
+                                    Facere ipsa, at necessitatibus hic debitis vitae cupiditate incidunt maiores.
+                                    Laboriosam ratione nesciunt maxime fuga eligendi. Tempore, modi doloribus. Harum
+                                    totam sint inventore!</p>
                                 <!-- Button trigger modal -->
                                 <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
                                     data-bs-target="#staticBackdrop">
@@ -136,8 +148,12 @@
                             </div>
                             <div class="blog-content">
                                 <h4>文章標題</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sequi maiores voluptas
-                                    consequatur pariatur corrupti, deleniti quo quam fugiat esse.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, doloribus! Expedita
+                                    maxime perferendis at maiores. Neque illo cum quia natus voluptatem eos fugiat porro
+                                    dicta a voluptatum exercitationem harum rem at, quo sunt, ut quasi accusamus aut!
+                                    Facere ipsa, at necessitatibus hic debitis vitae cupiditate incidunt maiores.
+                                    Laboriosam ratione nesciunt maxime fuga eligendi. Tempore, modi doloribus. Harum
+                                    totam sint inventore!</p>
                                 <!-- Button trigger modal -->
                                 <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
                                     data-bs-target="#staticBackdrop">
@@ -185,7 +201,7 @@
                         <h5 class="modal-title" id="staticBackdropLabel">蔬果之王！彩虹飲食讓身體更健康</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body">
+                    <div class="modal-body fs-3 lh-base">
                         <p>五顏六色的蔬果不僅賞心悅目，更是健康飲食的最佳選擇。每一種顏色的蔬果都含有不同的植化素，對人體有獨特的保健功效。</p>
                         <br>
                         <ol>
@@ -204,7 +220,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-secondary btn-lg" data-bs-dismiss="modal">關閉文章</button>
                     </div>
                 </div>
             </div>
