--- a/blog.html
+++ b/blog.html
@@ -13,27 +13,27 @@
 
     
     <link rel="icon" href="/MFEE-shark-gym-main/assets/shark-logo-7b445f04.png">
-  <script type="module" crossorigin src="/MFEE-shark-gym-main/assets/main-a4c3be52.js"></script>
-  <link rel="stylesheet" href="/MFEE-shark-gym-main/assets/main-c624d93c.css">
+  <script type="module" crossorigin src="/MFEE-shark-gym-main/assets/main-5d9fee48.js"></script>
+  <link rel="stylesheet" href="/MFEE-shark-gym-main/assets/main-de7ba2a6.css">
 </head>
 
 <body>
     <header class="container-md">
     <nav class="row">
         <ul class="col col-md-8 d-none d-md-flex justify-content-between align-items-center w-100 navbar">
-            <a href="../pages/index.html" class="nav-item" data-page="index">
+            <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/index" class="nav-item" data-page="index">
                 <li class="fs-3 fw-bolder">首頁</li>
             </a>
-            <a href="../pages/about.html" class="nav-item" data-page="about">
+            <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/about" class="nav-item" data-page="about">
                 <li class="fs-3 fw-bolder">關於我們</li>
             </a>
-            <a href="../pages/index.html">
+            <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/index">
                 <li><img src="/MFEE-shark-gym-main/assets/shark-logo-7b445f04.png" alt="logo" class="header-logo"></li>
             </a>
-            <a href="../pages/blog.html" class="nav-item" data-page="blog">
+            <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/blog" class="nav-item" data-page="blog">
                 <li class="fs-3 fw-bolder">部落格專欄</li>
             </a>
-            <a href="../pages/location.html" class="nav-item" data-page="location">
+            <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/location" class="nav-item" data-page="location">
                 <li class="fs-3 fw-bolder">最近的運動地點</li>
             </a>
         </ul>
@@ -134,8 +134,12 @@
                             </div>
                             <div class="blog-content">
                                 <h4>文章標題</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sequi maiores voluptas
-                                    consequatur pariatur corrupti, deleniti quo quam fugiat esse.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, doloribus! Expedita
+                                    maxime perferendis at maiores. Neque illo cum quia natus voluptatem eos fugiat porro
+                                    dicta a voluptatum exercitationem harum rem at, quo sunt, ut quasi accusamus aut!
+                                    Facere ipsa, at necessitatibus hic debitis vitae cupiditate incidunt maiores.
+                                    Laboriosam ratione nesciunt maxime fuga eligendi. Tempore, modi doloribus. Harum
+                                    totam sint inventore!</p>
                                 <!-- Button trigger modal -->
                                 <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
                                     data-bs-target="#staticBackdrop">
@@ -153,8 +157,12 @@
                             </div>
                             <div class="blog-content">
                                 <h4>文章標題</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sequi maiores voluptas
-                                    consequatur pariatur corrupti, deleniti quo quam fugiat esse.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, doloribus! Expedita
+                                    maxime perferendis at maiores. Neque illo cum quia natus voluptatem eos fugiat porro
+                                    dicta a voluptatum exercitationem harum rem at, quo sunt, ut quasi accusamus aut!
+                                    Facere ipsa, at necessitatibus hic debitis vitae cupiditate incidunt maiores.
+                                    Laboriosam ratione nesciunt maxime fuga eligendi. Tempore, modi doloribus. Harum
+                                    totam sint inventore!</p>
                                 <!-- Button trigger modal -->
                                 <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
                                     data-bs-target="#staticBackdrop">
@@ -172,8 +180,12 @@
                             </div>
                             <div class="blog-content">
                                 <h4>文章標題</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sequi maiores voluptas
-                                    consequatur pariatur corrupti, deleniti quo quam fugiat esse.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, doloribus! Expedita
+                                    maxime perferendis at maiores. Neque illo cum quia natus voluptatem eos fugiat porro
+                                    dicta a voluptatum exercitationem harum rem at, quo sunt, ut quasi accusamus aut!
+                                    Facere ipsa, at necessitatibus hic debitis vitae cupiditate incidunt maiores.
+                                    Laboriosam ratione nesciunt maxime fuga eligendi. Tempore, modi doloribus. Harum
+                                    totam sint inventore!</p>
                                 <!-- Button trigger modal -->
                                 <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
                                     data-bs-target="#staticBackdrop">
@@ -191,8 +203,12 @@
                             </div>
                             <div class="blog-content">
                                 <h4>文章標題</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod sequi maiores voluptas
-                                    consequatur pariatur corrupti, deleniti quo quam fugiat esse.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, doloribus! Expedita
+                                    maxime perferendis at maiores. Neque illo cum quia natus voluptatem eos fugiat porro
+                                    dicta a voluptatum exercitationem harum rem at, quo sunt, ut quasi accusamus aut!
+                                    Facere ipsa, at necessitatibus hic debitis vitae cupiditate incidunt maiores.
+                                    Laboriosam ratione nesciunt maxime fuga eligendi. Tempore, modi doloribus. Harum
+                                    totam sint inventore!</p>
                                 <!-- Button trigger modal -->
                                 <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
                                     data-bs-target="#staticBackdrop">
@@ -240,7 +256,7 @@
                         <h5 class="modal-title" id="staticBackdropLabel">蔬果之王！彩虹飲食讓身體更健康</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body">
+                    <div class="modal-body fs-3 lh-base">
                         <p>五顏六色的蔬果不僅賞心悅目，更是健康飲食的最佳選擇。每一種顏色的蔬果都含有不同的植化素，對人體有獨特的保健功效。</p>
                         <br>
                         <ol>
@@ -259,7 +275,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-secondary btn-lg" data-bs-dismiss="modal">關閉文章</button>
                     </div>
                 </div>
             </div>
