--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
   
   <link rel="icon" href="/MFEE-shark-gym-main/assets/shark-logo-7b445f04.png">
-  <script type="module" crossorigin src="/MFEE-shark-gym-main/assets/main-a4c3be52.js"></script>
-  <link rel="stylesheet" href="/MFEE-shark-gym-main/assets/main-c624d93c.css">
+  <script type="module" crossorigin src="/MFEE-shark-gym-main/assets/main-5d9fee48.js"></script>
+  <link rel="stylesheet" href="/MFEE-shark-gym-main/assets/main-de7ba2a6.css">
 </head>
 
 
@@ -25,19 +25,19 @@
   <header class="container-md">
     <nav class="row">
         <ul class="col col-md-8 d-none d-md-flex justify-content-between align-items-center w-100 navbar">
-            <a href="../pages/index.html" class="nav-item" data-page="index">
+            <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/index" class="nav-item" data-page="index">
                 <li class="fs-3 fw-bolder">首頁</li>
             </a>
-            <a href="../pages/about.html" class="nav-item" data-page="about">
+            <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/about" class="nav-item" data-page="about">
                 <li class="fs-3 fw-bolder">關於我們</li>
             </a>
-            <a href="../pages/index.html">
+            <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/index">
                 <li><img src="/MFEE-shark-gym-main/assets/shark-logo-7b445f04.png" alt="logo" class="header-logo"></li>
             </a>
-            <a href="../pages/blog.html" class="nav-item" data-page="blog">
+            <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/blog" class="nav-item" data-page="blog">
                 <li class="fs-3 fw-bolder">部落格專欄</li>
             </a>
-            <a href="../pages/location.html" class="nav-item" data-page="location">
+            <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/location" class="nav-item" data-page="location">
                 <li class="fs-3 fw-bolder">最近的運動地點</li>
             </a>
         </ul>
