--- a/pages/about.html
+++ b/pages/about.html
@@ -63,8 +63,8 @@
         <div class="input-group">
           <input type="text" class="form-control" placeholder="請輸入您的電子郵件" aria-label="Recipient's email"
             aria-describedby="button-addon">
-          <input type="text" class="form-control" placeholder="請輸入您的姓名" aria-label="Recipient's username"
-            aria-describedby="button-addon">
+          <input type="text" class="form-control d-none d-md-inline-block" placeholder="請輸入您的姓名"
+            aria-label="Recipient's username" aria-describedby="button-addon">
           <button class="btn btn-submit" type="button" id="button-addon">訂閱</button>
         </div>
       </div>
