--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
 
   
   <link rel="icon" href="/MFEE-shark-gym-main/assets/shark-logo-7b445f04.png">
-  <script type="module" crossorigin src="/MFEE-shark-gym-main/assets/main-5d9fee48.js"></script>
-  <link rel="stylesheet" href="/MFEE-shark-gym-main/assets/main-de7ba2a6.css">
+  <script type="module" crossorigin src="/MFEE-shark-gym-main/assets/main-16b4b478.js"></script>
+  <link rel="stylesheet" href="/MFEE-shark-gym-main/assets/main-9c5cf3ed.css">
 </head>
 
 <body>
@@ -44,7 +44,7 @@
     <!-- hamberger -->
     <div class="hambuger">
         <div class="d-flex justify-content-between align-items-center">
-            <a href="../pages/index.html" class="d-block">
+            <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/index" class="d-block">
                 <div><img src="/MFEE-shark-gym-main/assets/shark-logo-7b445f04.png" alt="logo" class="header-logo"></div>
             </a>
             <div class="menu">
@@ -59,17 +59,17 @@
 
 
         <ul class="hambuger-list">
-            <a href="../pages/index.html" class="nav-item" data-page="index">
+            <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/index" class="nav-item" data-page="index">
                 <li class="fs-5">首頁</li>
             </a>
-            <a href="../pages/about.html" class="nav-item" data-page="about">
+            <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/about" class="nav-item" data-page="about">
                 <li class="fs-5">關於我們</li>
             </a>
 
-            <a href="../pages/blog.html" class="nav-item" data-page="blog">
+            <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/blog" class="nav-item" data-page="blog">
                 <li class="fs-5">部落格專欄</li>
             </a>
-            <a href="../pages/location.html" class="nav-item" data-page="location">
+            <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/location" class="nav-item" data-page="location">
                 <li class="fs-5">最近的運動地點</li>
             </a>
         </ul>
@@ -118,8 +118,8 @@
         <div class="input-group">
           <input type="text" class="form-control" placeholder="請輸入您的電子郵件" aria-label="Recipient's email"
             aria-describedby="button-addon">
-          <input type="text" class="form-control" placeholder="請輸入您的姓名" aria-label="Recipient's username"
-            aria-describedby="button-addon">
+          <input type="text" class="form-control d-none d-md-inline-block" placeholder="請輸入您的姓名"
+            aria-label="Recipient's username" aria-describedby="button-addon">
           <button class="btn btn-submit" type="button" id="button-addon">訂閱</button>
         </div>
       </div>
