header modal adjust

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -46,7 +46,8 @@
                             </div>
                         </aside>
                     </li>
-                    <li class="blog-item" data-tags="health-nutrition">
+                    <li class="blog-item" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
+                        data-tags="health-nutrition">
                         <img src="../assets/images/article_1.jpg">
                         <div class="blog-info">
                             <div class="date_tag_block d-flex">
@@ -201,7 +202,7 @@
                         <h5 class="modal-title" id="staticBackdropLabel">蔬果之王！彩虹飲食讓身體更健康</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body fs-3 lh-base">
+                    <div class="modal-body fs-3 lh-base px-3 px-md-5">
                         <p>五顏六色的蔬果不僅賞心悅目，更是健康飲食的最佳選擇。每一種顏色的蔬果都含有不同的植化素，對人體有獨特的保健功效。</p>
                         <br>
                         <ol>
