--- a/pages/index.html
+++ b/pages/index.html
@@ -25,10 +25,12 @@
     <!-- Swiper -->
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="../assets/images/index_swiper_1.png" alt=""></div>
-        <div class="swiper-slide"><img src="../assets/images/index_swiper_2.jpg" alt=""></div>
-        <div class="swiper-slide"><img src="../assets/images/index_swiper_3.jpg" alt=""></div>
-        <div class="swiper-slide"><img src="../assets/images/index_swiper_4.jpg" alt=""></div>
+        <div class="swiper-slide"><img src="../assets/images/index_swiper_2.jpg"></div>
+        <div class="swiper-slide"><img src="../assets/images/index_swiper_1.jpg" style="object-position: 20% 20%;">
+        </div>
+        <div class="swiper-slide"><img src="../assets/images/index_swiper_3.jpg" style="object-position: 0 45%;"></div>
+        <div class="swiper-slide"><img src="../assets/images/index_swiper_4.jpg" style="object-position: 0 50%;">
+        </div>
       </div>
     </div>
 
@@ -158,7 +160,7 @@
           spaceBetween: 30,
           centeredSlides: true,
           autoplay: {
-            delay: 2500,
+            delay: 3000,
             disableOnInteraction: false,
           },
           pagination: {
