--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
   
   <link rel="icon" href="/MFEE-shark-gym-main/assets/shark-logo-7b445f04.png">
-  <script type="module" crossorigin src="/MFEE-shark-gym-main/assets/main-16b4b478.js"></script>
-  <link rel="stylesheet" href="/MFEE-shark-gym-main/assets/main-9c5cf3ed.css">
+  <script type="module" crossorigin src="/MFEE-shark-gym-main/assets/main-8f9507c6.js"></script>
+  <link rel="stylesheet" href="/MFEE-shark-gym-main/assets/main-d35ae8d0.css">
 </head>
 
 
@@ -43,7 +43,7 @@
         </ul>
     </nav>
     <!-- hamberger -->
-    <div class="hambuger">
+    <div class="hamburger">
         <div class="d-flex justify-content-between align-items-center">
             <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/index" class="d-block">
                 <div><img src="/MFEE-shark-gym-main/assets/shark-logo-7b445f04.png" alt="logo" class="header-logo"></div>
@@ -59,7 +59,7 @@
         </div>
 
 
-        <ul class="hambuger-list">
+        <ul class="hamburger-list">
             <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/index" class="nav-item" data-page="index">
                 <li class="fs-5">首頁</li>
             </a>
@@ -80,10 +80,12 @@
     <!-- Swiper -->
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="/MFEE-shark-gym-main/assets/index_swiper_1-8b5658dd.png" alt=""></div>
-        <div class="swiper-slide"><img src="/MFEE-shark-gym-main/assets/index_swiper_2-e1a8fb68.jpg" alt=""></div>
-        <div class="swiper-slide"><img src="/MFEE-shark-gym-main/assets/index_swiper_3-447fe3b7.jpg" alt=""></div>
-        <div class="swiper-slide"><img src="/MFEE-shark-gym-main/assets/index_swiper_4-7b362e52.jpg" alt=""></div>
+        <div class="swiper-slide"><img src="/MFEE-shark-gym-main/assets/index_swiper_2-e1a8fb68.jpg"></div>
+        <div class="swiper-slide"><img src="/MFEE-shark-gym-main/assets/index_swiper_1-d16318fd.jpg" style="object-position: 20% 20%;">
+        </div>
+        <div class="swiper-slide"><img src="/MFEE-shark-gym-main/assets/index_swiper_3-447fe3b7.jpg" style="object-position: 0 45%;"></div>
+        <div class="swiper-slide"><img src="/MFEE-shark-gym-main/assets/index_swiper_4-c132ee89.jpg" style="object-position: 0 50%;">
+        </div>
       </div>
     </div>
 
@@ -236,7 +238,7 @@
           spaceBetween: 30,
           centeredSlides: true,
           autoplay: {
-            delay: 2500,
+            delay: 3000,
             disableOnInteraction: false,
           },
           pagination: {
