--- a/location.html
+++ b/location.html
@@ -26,9 +26,9 @@
   
 
 
-  <script type="module" crossorigin src="/MFEE-shark-gym-main/assets/location-39c1edee.js"></script>
-  <link rel="modulepreload" crossorigin href="/MFEE-shark-gym-main/assets/main-16b4b478.js">
-  <link rel="stylesheet" href="/MFEE-shark-gym-main/assets/main-9c5cf3ed.css">
+  <script type="module" crossorigin src="/MFEE-shark-gym-main/assets/location-4898bc49.js"></script>
+  <link rel="modulepreload" crossorigin href="/MFEE-shark-gym-main/assets/main-8f9507c6.js">
+  <link rel="stylesheet" href="/MFEE-shark-gym-main/assets/main-d35ae8d0.css">
 </head>
 
 <body>
@@ -53,7 +53,7 @@
         </ul>
     </nav>
     <!-- hamberger -->
-    <div class="hambuger">
+    <div class="hamburger">
         <div class="d-flex justify-content-between align-items-center">
             <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/index" class="d-block">
                 <div><img src="/MFEE-shark-gym-main/assets/shark-logo-7b445f04.png" alt="logo" class="header-logo"></div>
@@ -69,7 +69,7 @@
         </div>
 
 
-        <ul class="hambuger-list">
+        <ul class="hamburger-list">
             <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/index" class="nav-item" data-page="index">
                 <li class="fs-5">首頁</li>
             </a>
