--- a/blog.html
+++ b/blog.html
@@ -13,8 +13,8 @@
 
     
     <link rel="icon" href="/MFEE-shark-gym-main/assets/shark-logo-7b445f04.png">
-  <script type="module" crossorigin src="/MFEE-shark-gym-main/assets/main-16b4b478.js"></script>
-  <link rel="stylesheet" href="/MFEE-shark-gym-main/assets/main-9c5cf3ed.css">
+  <script type="module" crossorigin src="/MFEE-shark-gym-main/assets/main-8f9507c6.js"></script>
+  <link rel="stylesheet" href="/MFEE-shark-gym-main/assets/main-d35ae8d0.css">
 </head>
 
 <body>
@@ -39,7 +39,7 @@
         </ul>
     </nav>
     <!-- hamberger -->
-    <div class="hambuger">
+    <div class="hamburger">
         <div class="d-flex justify-content-between align-items-center">
             <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/index" class="d-block">
                 <div><img src="/MFEE-shark-gym-main/assets/shark-logo-7b445f04.png" alt="logo" class="header-logo"></div>
@@ -55,7 +55,7 @@
         </div>
 
 
-        <ul class="hambuger-list">
+        <ul class="hamburger-list">
             <a href="https://dizzydog-rgb.github.io/MFEE-shark-gym-main/index" class="nav-item" data-page="index">
                 <li class="fs-5">首頁</li>
             </a>
@@ -101,7 +101,8 @@
                             </div>
                         </aside>
                     </li>
-                    <li class="blog-item" data-tags="health-nutrition">
+                    <li class="blog-item" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
+                        data-tags="health-nutrition">
                         <img src="/MFEE-shark-gym-main/assets/article_1-c1719172.jpg">
                         <div class="blog-info">
                             <div class="date_tag_block d-flex">
@@ -256,7 +257,7 @@
                         <h5 class="modal-title" id="staticBackdropLabel">蔬果之王！彩虹飲食讓身體更健康</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body fs-3 lh-base">
+                    <div class="modal-body fs-3 lh-base px-3 px-md-5">
                         <p>五顏六色的蔬果不僅賞心悅目，更是健康飲食的最佳選擇。每一種顏色的蔬果都含有不同的植化素，對人體有獨特的保健功效。</p>
                         <br>
                         <ol>
