blog page all-article tag fix

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -28,7 +28,7 @@
                     <li>
                         <aside class="col-md-2 col d-block d-md-none">
                             <div class="tag-group text-center d-flex">
-                                <button class="btn tag-all" vlaue="all-article">
+                                <button type="button" class="btn btn-tags tag-all" value="all-article">
                                     全部文章
                                 </button>
                                 <button class="btn btn-tag" value="coach-column">
